tests/ui/macros/macro-context.stderr
error: macro expansion ignores `;` and any tokens following
  --> $DIR/macro-context.rs:3:15
   |
LL |     () => ( i ; typeof );
   |               ^
...
LL |     let a: m!();
   |            ---- caused by the macro expansion here
   |
   = note: the usage of `m!` is likely invalid in type context

error: macro expansion ignores reserved keyword `typeof` and any tokens following
  --> $DIR/macro-context.rs:3:17
   |
LL |     () => ( i ; typeof );
   |                 ^^^^^^
...
LL |     let i = m!();
   |             ---- caused by the macro expansion here
   |
   = note: the usage of `m!` is likely invalid in expression context

error: macro expansion ignores `;` and any tokens following
  --> $DIR/macro-context.rs:3:15
   |
LL |     () => ( i ; typeof );
   |               ^
...
LL |         m!() => {}
   |         ---- caused by the macro expansion here
   |
   = note: the usage of `m!` is likely invalid in pattern context

error: expected expression, found reserved keyword `typeof`
  --> $DIR/macro-context.rs:3:17
   |
LL |     () => ( i ; typeof );
   |                 ^^^^^^ expected expression
...
LL |     m!();
   |     ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `i` in this scope
  --> $DIR/macro-context.rs:3:13
   |
LL |     () => ( i ; typeof );
   |             ^
...
LL |     let a: m!();
   |            ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a builtin type with a similar name exists
   |
LL |     () => ( i8 ; typeof );
   |              +

error[E0425]: cannot find value `i` in this scope
  --> $DIR/macro-context.rs:3:13
   |
LL |     () => ( i ; typeof );
   |             ^ not found in this scope
...
LL |     let i = m!();
   |             ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: trailing semicolon in macro used in expression position
  --> $DIR/macro-context.rs:3:15
   |
LL |     () => ( i ; typeof );
   |               ^
...
LL |     let i = m!();
   |             ---- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #79813 <https://github.com/rust-lang/rust/issues/79813>
   = note: `#[deny(semicolon_in_expressions_from_macros)]` (part of `#[deny(future_incompatible)]`) on by default
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Future incompatibility report: Future breakage diagnostic:
error: trailing semicolon in macro used in expression position
  --> $DIR/macro-context.rs:3:15
   |
LL |     () => ( i ; typeof );
   |               ^
...
LL |     let i = m!();
   |             ---- in this macro invocation
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #79813 <https://github.com/rust-lang/rust/issues/79813>
   = note: `#[deny(semicolon_in_expressions_from_macros)]` (part of `#[deny(future_incompatible)]`) on by default
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

